# iTermX

.github/workflows/: android.yml
src-tauri/: Cargo.toml
src-tauri/src/commands/ssh/: core.rs
