[package]
name = "iShell"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ishell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tauri-plugin-shell = "2.3.3"
tauri-plugin-fs = "2.0.0"
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
tauri-plugin-dialog = "2"
tauri-plugin-sql = "2.3.1"
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio" ] }
tauri-plugin-autostart = "2.5.1"
chrono = { version = "0.4", features = ["serde"] }
# font-kit = "0.11"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
zip = "0.6"
walkdir = "2"
regex = "1"
urlencoding = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard = "2.1.11"
